--- a/naodong_wxgame/project.config.json
+++ b/naodong_wxgame/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "game",
 	"libVersion": "game",
 	"appid": "wx4d8dd9ff994ab958",
-	"projectname": "zhognji",
+	"projectname": "a",
 	"condition": {
 		"search": {
 			"current": -1,
